--- a/html/index.html
+++ b/html/index.html
@@ -515,7 +515,7 @@
       <div class="container-full">
         <div class="row noMargin">
           <div class="col-sm-12 noPadding">
-            <div id="promos" class="carousel slide" data-ride="carousel">
+            <div id="promos" class="carousel slide" data-ride="carousel" data-interval="4000">
               <!-- Indicators -->
               <ol class="carousel-indicators">
                 <li data-target="#promos" data-slide-to="0" class="active"></li>
