--- a/html/promociones.html
+++ b/html/promociones.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Promociones - ADVOCATUS | Editorial · Librer?a</title>
+    <title>Promociones - ADVOCATUS | Editorial ï¿½ Librer?a</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -78,7 +78,7 @@
             </div>
           </div>
         </div>
-        <!-- Menú -->
+        <!-- Menï¿½ -->
         <div class="col-md-10 pull-right collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
@@ -225,7 +225,7 @@
       <div class="container-full">
         <div class="row noMargin">
           <div class="col-sm-12 noPadding">
-            <div id="promos" class="carousel slide" data-ride="carousel">
+            <div id="promos" class="carousel slide" data-ride="carousel" data-interval="4000">
               <!-- Indicators -->
               <ol class="carousel-indicators">
                 <li data-target="#promos" data-slide-to="0" class="active"></li>
