Ajustes anexo docentes privaods

--- a/anexo/docentes-privados.html
+++ b/anexo/docentes-privados.html
@@ -381,7 +381,7 @@
 <p>
     1.1.3. Convención relativa a la Lucha contra la Discriminación en la Esfera
     de la Enseñanza - UNESCO 1960
-<a href="/descargas/Convencion%20relativa%20a%20la%20lucha%20contra%20la%20discriminacion%20en%20la%20esfera%20de%20la%20ense%C3%B1anza%20-%20UNESCO%201960.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
+<a href="/descargas/Convencion%20relativa%20a%20la%20lucha%20contra%20la%20discriminacion%20en%20la%20esfera%20de%20la%20ensenanza%20-%20UNESCO%201960.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.1.4. Pacto Internacional de Derechos Civiles y Políticos
 <a href="/descargas/Pacto%20Internacional%20de%20Derechos%20Civiles%20y%20Politicos.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
@@ -404,7 +404,7 @@
 <a href="/descargas/OIT%20-%20C98%20Convenio%20sobre%20el%20derecho%20de%20sindicacion%20y%20de%20negociacion%20colectiva.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.1.10. Recomendación de OIT - UNESCO 1966 y UNESCO 1997
-<a href="/descargas/Recomendaci%C3%B3n%20de%20OIT-UNESCO%201966%20y%20UNESCO%201997.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
+<a href="/descargas/Recomendacion%20de%20OIT-UNESCO%201966%20y%20UNESCO%201997.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 </div>
 <p style="padding-left: 3%;">
     1.2. <strong>Leyes nacionales y decretos</strong></p>
@@ -417,13 +417,13 @@
 <a href="/descargas/Ley%2026.206%20-%20Ley%20de%20Educacion%20Nacional.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.2.3. Ley 24.521 - Educación Superior
-<a href="/descargas/Ley%2024.521%20-%20Educaci%C3%B3n%20Superior.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
+<a href="/descargas/Ley%2024.521%20-%20Educacion%20Superior.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.2.4. Ley 20.744 - Ley de Contrato de Trabajo
 <a href="/descargas/Ley%2020.744%20-%20Ley%20de%20Contrato%20de%20Trabajo.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.2.5. Ley 25.573 - Educación Superior - Modificación de Ley N° 24.521
-<a href="/descargas/Ley%2025.573%20-%20Educacion%20Superior%20-%20Modificacion%20de%20Ley%20N%C2%B0%2024.521.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
+<a href="/descargas/Ley%2025.573%20-%20Educacion%20Superior%20-%20Modificacion%20de%20Ley%20N%202024.521.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.2.6. Ley 13.047 - Estatuto del Docente de Establecimientos Privados
 <a href="/descargas/Ley%2013.047%20-%20Estatuto%20del%20Docente%20de%20Establecimientos%20Privados.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
@@ -444,7 +444,7 @@
 <p>
     1.2.11. Ley 25.919 - Fondo Nacional de Incentivo Docente - Modifica Ley
     25.053
-<a href="/descargas/Ley%2025.919%20-%20Fondo%20Nacional%20de%20Incentivo%20Docente%20-%20Modifica%20Ley%2025.053.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
+<a href="/descargas/Ley%2025.919%20-%20Fondo%20Nacional%20de%20Incentivo%20Docente%20-%20Modifica%20Ley%2025053.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.2.12. Ley 25.923 - Obligaciones tributarias con relación al fondo
     nacional de incentivo docente
@@ -455,11 +455,11 @@
 <p>
     1.2.14. Ley 26.061 - Ley de Protección Integral de los Derechos de las
     Niñas Niños y Adolescentes
-<a href="/descargas/Ley%2026.061%20-%20Ley%20de%20Proteccion%20Integral%20de%20los%20Derechos%20de%20las%20Ni%C3%B1as%20Ni%C3%B1os%20y%20Adolescentes.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
+<a href="/descargas/Ley%2026.061%20-%20Ley%20de%20Proteccion%20Integral%20de%20los%20Derechos%20de%20las%20Ninas%20Ninos%20y%20Adolescentes.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.2.15. Ley 26.075 - Modificación de Ley N° 25.919 - Fondo Nacional de
     Incentivo Docente
-<a href="/descargas/Ley%2026.075%20-%20Modificacion%20de%20Ley%20N%C2%B0%2025.919%20-%20Fondo%20Nacional%20de%20Incentivo%20Docente.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
+<a href="/descargas/Ley%2026.075%20-%20Modificacion%20de%20Ley%20N%202025.919%20-%20Fondo%20Nacional%20de%20Incentivo%20Docente.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
 <p>
     1.2.16. Ley 26.150 - Programa Nacional de Educación Sexual Integral
 <a href="/descargas/Ley%2026.150%20-%20Programa%20Nacional%20de%20Educacion%20Sexual%20Integral.pdf" target="_blank" title="Descargar"><i class="fa fa-fw fa-download" aria-hidden="true"></i></a></p>
